plugins {
	id 'application'
}

version = '1.0.0.RELEASE'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories { 
	mavenCentral()
}

dependencies {
	testImplementation("org.junit.jupiter:junit-jupiter:5.8.2")
	testImplementation("org.assertj:assertj-core:3.22.0")
	testImplementation("org.mockito:mockito-junit-jupiter:4.2.0")
}

application {
	mainClass = 'net.tomhermann.textimage.Main'
}

test {
	useJUnitPlatform()
}
